ops/substrate/modules/telemetry-ingress/regional/main.tf
data "vercel_team" "readyset" {
  slug = "readyset"
}

data "aws_security_group" "default" {
  vpc_id = var.vpc_id
  name   = "default"
}

resource "aws_s3_bucket" "bucket" {
  bucket = var.s3_bucket_name
}

data "aws_iam_policy_document" "ec2_assume_role_policy" {
  statement {
    actions = ["sts:AssumeRole"]
    effect  = "Allow"

    principals {
      type        = "Service"
      identifiers = ["ec2.amazonaws.com"]
    }
  }
}

resource "aws_iam_role" "telemetry-ingress-instance" {
  name               = "telemetry-ingress-instance"
  assume_role_policy = data.aws_iam_policy_document.ec2_assume_role_policy.json
}

data "aws_iam_policy_document" "telemetry_ingress_s3_access" {
  statement {
    effect = "Allow"
    actions = [
      "s3:GetObject",
      "s3:GetObjectVersion",
      "s3:PutObject",
      "s3:PutObjectAcl",
    ]
    resources = [
      "${aws_s3_bucket.bucket.arn}/*"
    ]
  }

  statement {
    effect = "Allow"
    actions = [
      "s3:ListBucket",
      "s3:GetBucketLocation"
    ]
    resources = [
      aws_s3_bucket.bucket.arn,
    ]
  }
}

resource "aws_iam_instance_profile" "telemetry-ingress-instance" {
  name = "telemetry-ingress-instance"
  role = aws_iam_role.telemetry-ingress-instance.name
}

resource "aws_iam_role_policy" "telemetry_ingress_s3_access" {
  name   = "TelemetryIngressS3Access"
  role   = aws_iam_role.telemetry-ingress-instance.id
  policy = data.aws_iam_policy_document.telemetry_ingress_s3_access.json
}

resource "aws_acm_certificate" "telemetry-ingress" {
  domain_name       = "${var.domain}.readyset.io"
  validation_method = "DNS"
}

resource "vercel_dns" "telemetry_ingress_validation" {
  for_each = {
    for dvo in aws_acm_certificate.telemetry-ingress.domain_validation_options : dvo.domain_name => {
      name   = dvo.resource_record_name
      record = dvo.resource_record_value
      type   = dvo.resource_record_type
    }
  }

  domain  = "readyset.io"
  name    = trimsuffix(each.value.name, ".readyset.io.")
  type    = each.value.type
  value   = each.value.record
  team_id = data.vercel_team.readyset.id
}

resource "aws_acm_certificate_validation" "telemetry-ingress" {
  certificate_arn = aws_acm_certificate.telemetry-ingress.arn
  validation_record_fqdns = [
    for record in vercel_dns.telemetry_ingress_validation : "${record.name}.readyset.io"
  ]
}

resource "aws_security_group" "telemetry-ingress-instance" {
  name        = "telemetry-ingress-instance"
  description = "Security group for the telemetry ingress instances"
  vpc_id      = var.vpc_id

  ingress {
    description     = "HTTP from load balancer"
    from_port       = 80
    to_port         = 80
    protocol        = "tcp"
    security_groups = [aws_security_group.telemetry-ingress-lb.id]
  }

  egress {
    from_port        = 0
    to_port          = 0
    protocol         = "-1"
    cidr_blocks      = ["0.0.0.0/0"]
    ipv6_cidr_blocks = ["::/0"]
  }

  tags = {
    Name = "telemetry-ingress-instance"
  }
}

module "asg" {
  source  = "terraform-aws-modules/autoscaling/aws"
  version = "~> 6.3.0"
  name    = "telemetry-ingress"

  launch_template_name = "telemetry-ingress-launch-template"

  image_id        = var.ami_id
  instance_type   = "t2.micro"
  security_groups = [aws_security_group.telemetry-ingress-instance.id]
  load_balancers  = [module.elb.elb_id]
  key_name        = var.key_name

  iam_instance_profile_arn = aws_iam_instance_profile.telemetry-ingress-instance.arn

  user_data = base64encode(
    <<-EOT
      #!/bin/bash
      set -euo pipefail

      export S3_BUCKET="${aws_s3_bucket.bucket.bucket}"
      export AUTHORITY="${var.jwt_authority}"
      exec /usr/local/bin/user-data-init.sh
    EOT
  )

  block_device_mappings = [{
    device_name = "/dev/xvda"
    no_device   = 0
    ebs = {
      delete_on_termination = true
      volume_size           = 50
      volume_type           = "gp3"
    }
  }]

  metadata_options = {
    # Require IMDSv2
    http_tokens   = "required"
    http_endpoint = "enabled"
  }

  instance_refresh = {
    strategy = "Rolling"
    preferences = {
      checkpoint_delay       = 600
      min_healthy_percentage = 50
    }
  }

  # Auto scaling group
  vpc_zone_identifier = var.subnet_ids
  health_check_type   = "EC2"
  min_size            = 1
  max_size            = var.num_replicas
  desired_capacity    = var.num_replicas
}


resource "aws_security_group" "telemetry-ingress-lb" {
  name        = "telemetry_ingress"
  description = "Security group for the telemetry ingress load balancer"
  vpc_id      = var.vpc_id

  ingress {
    description      = "HTTP from anywhere"
    from_port        = 80
    to_port          = 80
    protocol         = "tcp"
    cidr_blocks      = ["0.0.0.0/0"]
    ipv6_cidr_blocks = ["::/0"]
  }

  ingress {
    description      = "HTTPS from anywhere"
    from_port        = 443
    to_port          = 443
    protocol         = "tcp"
    cidr_blocks      = ["0.0.0.0/0"]
    ipv6_cidr_blocks = ["::/0"]
  }

  egress {
    from_port        = 0
    to_port          = 0
    protocol         = "-1"
    cidr_blocks      = ["0.0.0.0/0"]
    ipv6_cidr_blocks = ["::/0"]
  }

}

module "elb" {
  source  = "terraform-aws-modules/elb/aws"
  version = "~> 3.0"
  name    = "telemetry-ingress-elb"

  subnets         = var.subnet_ids
  security_groups = [aws_security_group.telemetry-ingress-lb.id]
  internal        = false

  listener = [{
    instance_port      = "80"
    instance_protocol  = "http"
    lb_port            = "443"
    lb_protocol        = "https"
    ssl_certificate_id = aws_acm_certificate_validation.telemetry-ingress.certificate_arn
  }]

  health_check = {
    target              = "HTTP:80/healthz"
    interval            = 30
    healthy_threshold   = 2
    unhealthy_threshold = 2
    timeout             = 5
  }
}

resource "vercel_dns" "main" {
  team_id = data.vercel_team.readyset.id
  domain  = "readyset.io"
  name    = var.domain
  type    = "CNAME"
  value   = "${module.elb.elb_dns_name}."
}
